--- a/cse(326)/index.html
+++ b/cse(326)/index.html
@@ -4,20 +4,20 @@
 	<meta charset="UTF-8">
 	<title>INDIAN electricity website</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
-	<?php
+	
 session_start();
-	?></head>
+	</head>
 <body>
 	<div id="background">
 		<div id="page">
 			<div id="header">
-					<div align="right" ><?php if (isset($_SESSION['name']))
+					<div align="right" >
       <font color='blue'></font><br><br>
-	  <a href='../logout.php'>login/Register<font color=white></font></a>
+	  <a href='../logout'>login/Register<font color=white></font></a>
 
 </div>
 				<div id="logo">
-					<a href="index.php"><img src="images/project1.jpg" alt="LOGO" height="112" width="150"></a>
+					<a href="index.html"><img src="images/project1.jpg" alt="LOGO" height="112" width="150"></a>
 				</div>
 				<div id="navigation">
 					<ul>
@@ -64,9 +64,9 @@ Turn off that old window unit air conditioner for five hours a day while you're 
 					</p>
 					<h1>Quick pay</h1>
 					<form method="Post" class="own">
-						<span>Enter Mobile no:   <input type="text" name="Enter mobile no" size="13px">&emsp;
+						<span>Enter Mobile no:   <input type="text" name="Enter mobile no" size="13px">
 							
-							&emsp;Amount:   <input type="text" name="Amount" size="13px">&emsp;<br>
+							Amount:   <input type="text" name="Amount" size="13px"><br>
 						</span>
 						<br><br>
 						<div style="text-align:center">  
